refactor: change structures because of deleting resolvers